--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/ShiftAssign/ShiftAssign.css
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/ShiftAssign/ShiftAssign.css
@@ -16,7 +16,7 @@
     border-bottom: 1px solid #ccc; }
     .shiftEmployeeList li input[type="checkbox"] {
       margin-right: 10px; }
-    .shiftEmployeeList li span {
+    .shiftEmployeeList li label {
       padding: 7px;
       border-left: 1px solid #ccc; }
     .shiftEmployeeList li:hover {
@@ -42,9 +42,9 @@
     text-align: left;
     background: #fff;
     border-bottom: 1px solid #ccc; }
-    .shiftList li input[type="checkbox"] {
+    .shiftList li input[type="radio"] {
       margin-right: 10px; }
-    .shiftList li span {
+    .shiftList li label {
       padding: 7px;
       border-left: 1px solid #ccc; }
     .shiftList li:hover {
