--- a/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.css
+++ b/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.css
@@ -9,6 +9,46 @@
   background-color: "lightgray";
   cursor: pointer; }
 
+.EmployeeProjectRoster .editAction {
+  position: relative; }
+  .EmployeeProjectRoster .editAction .fa-ellipsis-v {
+    display: none;
+    position: absolute;
+    top: 5px;
+    right: 1px;
+    width: 16px;
+    height: 16px;
+    color: #ccc; }
+    .EmployeeProjectRoster .editAction .fa-ellipsis-v:hover {
+      color: #000; }
+    .EmployeeProjectRoster .editAction .fa-ellipsis-v:hover + ul {
+      display: block; }
+  .EmployeeProjectRoster .editAction ul {
+    display: none;
+    list-style: none;
+    border: 1px solid #ccc;
+    position: absolute;
+    width: auto;
+    min-width: 100px;
+    right: 5px;
+    top: 18px;
+    margin: 0;
+    padding: 0;
+    z-index: 9; }
+    .EmployeeProjectRoster .editAction ul li {
+      padding: 5px 10px;
+      text-align: left;
+      background: #fff;
+      border-bottom: 1px solid #ccc; }
+      .EmployeeProjectRoster .editAction ul li:hover {
+        background-color: #f2f2f2; }
+      .EmployeeProjectRoster .editAction ul li::last-child {
+        border-bottom: none; }
+    .EmployeeProjectRoster .editAction ul:hover {
+      display: block; }
+  .EmployeeProjectRoster .editAction:hover .fa-ellipsis-v {
+    display: block; }
+
 .EmployeeProjectRoster .week_off_cell {
   background: #3f9c62;
   color: white; }
