--- a/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.scss
+++ b/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.scss
@@ -11,6 +11,57 @@
     background-color: "lightgray";
     cursor: pointer;
   }
+  .editAction {
+    position: relative;
+    .fa-ellipsis-v {
+      display: none;
+      position: absolute;
+      top: 5px;
+      right: 1px;
+      width: 16px;
+      height: 16px;
+      color: #ccc;
+      &:hover {
+        color: #000;
+      }
+      &:hover + ul {
+        display: block;
+      }
+    }
+    ul {
+      display: none;
+      list-style: none;
+      border: 1px solid #ccc;
+      position: absolute;
+      width: auto;
+      min-width: 100px;
+      right: 5px;
+      top: 18px;
+      margin: 0;
+      padding: 0;
+      z-index: 9;
+      li {
+        padding: 5px 10px;
+        text-align: left;
+        background: #fff;
+        border-bottom: 1px solid #ccc;
+        &:hover {
+          background-color: #f2f2f2;
+        }
+        &::last-child {
+          border-bottom: none;
+        }
+      }
+      &:hover {
+        display: block;
+      }
+    }
+    &:hover {
+      .fa-ellipsis-v {
+        display: block;
+      }
+    }
+  }
 
   .week_off_cell {
     background: rgb(63, 156, 98);
