--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -65,7 +65,9 @@
 
   .week_off_cell {
     background: rgb(63, 156, 98);
-    color: white;
+    span {
+      color: white;
+    }
   }
 
   .holiday_cell {
