--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/ShiftAssign/ShiftAssign.css
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/ShiftAssign/ShiftAssign.css
@@ -53,3 +53,10 @@
       border-bottom: none; }
     .shiftList li:nth-child(even) {
       background-color: #f7f7f7; }
+
+.rosterSrch {
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px; }
