--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/ShiftAssign/ShiftAssign.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/ShiftAssign/ShiftAssign.scss
@@ -68,3 +68,11 @@
     }
   }
 }
+
+.rosterSrch {
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
