--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -34,6 +34,7 @@
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
       padding-top: 10px;
       padding-bottom: 10px;
+      margin: 10px;
       .dayTypeCntr {
         height: 0.3rem;
         padding-right: 0;
