--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -116,7 +116,7 @@
           border-bottom: 1px solid #d2d2d2;
           color: #000 !important;
           background: #dff6f6 !important;
-          width: 75px;
+          width: 55px; // changed from 75px to 55px to make it compact
           // &:nth-child(1) {
           //   text-align: center;
           //   width: 120px;
