Changes in Shift Rostering

--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -13,6 +13,7 @@
   }
   .editAction {
     position: relative;
+    //z-index: 9999;
     .fa-ellipsis-v {
       display: none;
       position: absolute;
