--- a/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.scss
+++ b/client/src/Components/EmployeeManagement/ProjectJobCost/EmployeeProjectRoster/EmployeeProjectRoster.scss
@@ -114,12 +114,12 @@
           border-bottom: 1px solid #d2d2d2;
           color: #000 !important;
           background: #dff6f6 !important;
-          width: 75px;
+          width: 55px;
+          // &:nth-child(1) {
+          //   text-align: center;
+          //   width: 120px;
+          // }
           &:nth-child(1) {
-            text-align: center;
-            width: 120px;
-          }
-          &:nth-child(2) {
             text-align: left;
             width: 200px;
           }
@@ -143,11 +143,11 @@
             border-right: 1px solid #ececec;
             border-top: 1px solid #ececec;
             width: 75px;
+            // &:nth-child(1) {
+            //   text-align: center;
+            //   width: 120px;
+            // }
             &:nth-child(1) {
-              text-align: center;
-              width: 120px;
-            }
-            &:nth-child(2) {
               text-align: left;
               width: 200px;
             }
