--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -14,6 +14,39 @@
   .editAction {
     position: relative;
     //z-index: 9999;
+    span {
+      display: block;
+      width: 80%;
+      &:hover {
+        .shiftMoreInfo {
+          display: block;
+        }
+      }
+    }
+    .shiftMoreInfo {
+      font-size: 0.7rem;
+      width: 150px;
+      padding: 2px 5px;
+      position: absolute;
+      z-index: 9;
+      top: 15px;
+      right: 30px;
+      font-weight: normal;
+      display: none;
+      background: rgba(255, 255, 255, 0.95);
+      text-align: left;
+      border-radius: 4px;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+      span {
+        width: 100%;
+        color: #000;
+        b {
+          text-align: right;
+          float: right;
+        }
+      }
+    }
     .fa-ellipsis-v {
       display: none;
       position: absolute;
