--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -7,10 +7,92 @@
     border-radius: 6px;
   }
 
+  .leave_cell_auth {
+    background: rgb(135, 156, 63);
+    color: white;
+    position: relative;
+    span {
+      display: block;
+      width: 80%;
+      position: relative;
+      &:hover {
+        .leaveInfo {
+          display: block;
+        }
+      }
+    }
+
+    .leaveInfo {
+      font-size: 0.7rem;
+      width: 150px;
+      padding: 2px 5px;
+      position: absolute;
+      z-index: 9;
+      top: 15px;
+      right: 30px;
+      font-weight: normal;
+      display: none;
+      background: rgba(255, 255, 255, 0.95);
+      text-align: left;
+      border-radius: 4px;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+      span {
+        width: 100%;
+        color: #000;
+        b {
+          text-align: right;
+          float: right;
+        }
+      }
+    }
+  }
+  .leave_cell_unauth {
+    background: rgb(156, 125, 63);
+    color: white;
+    position: relative;
+    span {
+      display: block;
+      width: 80%;
+      position: relative;
+      &:hover {
+        .leaveInfo {
+          display: block;
+        }
+      }
+    }
+
+    .leaveInfo {
+      font-size: 0.7rem;
+      width: 150px;
+      padding: 2px 5px;
+      position: absolute;
+      z-index: 9;
+      top: 15px;
+      right: 30px;
+      font-weight: normal;
+      display: none;
+      background: rgba(255, 255, 255, 0.95);
+      text-align: left;
+      border-radius: 4px;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+      span {
+        width: 100%;
+        color: #000;
+        b {
+          text-align: right;
+          float: right;
+        }
+      }
+    }
+  }
+
   .time_cell {
     background-color: "lightgray";
     cursor: pointer;
   }
+
   .editAction {
     position: relative;
     //z-index: 9999;
@@ -106,11 +188,6 @@
 
   .holiday_cell {
     background: rgb(63, 120, 156);
-    color: white;
-  }
-
-  .leave_cell {
-    background: rgb(135, 156, 63);
     color: white;
   }
 
