UI tweak for Employee Shift Rostering...

--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.css
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.css
@@ -152,6 +152,7 @@
   background-color: #58b9c0; }
 
 .EmpShiftRost_Screen #shiftRosterTable {
+  min-height: 54vh;
   overflow: auto;
   border: 1px solid #d2d2d2; }
   .EmpShiftRost_Screen #shiftRosterTable .noTimeSheetData {
@@ -169,7 +170,7 @@
     box-sizing: border-box;
     table-layout: fixed;
     min-height: 20vh;
-    max-height: 55vh; }
+    max-height: 52vh; }
     .EmpShiftRost_Screen #shiftRosterTable table thead th {
       padding: 3px;
       text-align: center;
@@ -177,12 +178,15 @@
       border-bottom: 1px solid #d2d2d2;
       color: #000 !important;
       background: #dff6f6 !important;
-      width: 55px; }
+      width: 45px;
+      font-size: 0.7em; }
       .EmpShiftRost_Screen #shiftRosterTable table thead th:nth-child(1) {
         text-align: left;
-        width: 200px; }
+        width: 200px;
+        font-size: 1em; }
       .EmpShiftRost_Screen #shiftRosterTable table thead th:last-child, .EmpShiftRost_Screen #shiftRosterTable table thead th:nth-last-child(2) {
-        width: 100px; }
+        width: 100px;
+        font-size: 1em; }
     .EmpShiftRost_Screen #shiftRosterTable table tbody {
       overflow: auto;
       min-height: 60vh;
@@ -192,7 +196,8 @@
         text-align: center;
         border-right: 1px solid #ececec;
         border-top: 1px solid #ececec;
-        width: 75px; }
+        width: 45px;
+        font-size: 0.8em; }
         .EmpShiftRost_Screen #shiftRosterTable table tbody tr td:nth-child(1) {
           text-align: left;
           width: 200px; }
