--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -196,6 +196,7 @@
   }
 
   #shiftRosterTable {
+    min-height: 54vh;
     .noTimeSheetData {
       text-align: center;
       color: rgba(0, 0, 0, 0.1);
@@ -217,7 +218,7 @@
       box-sizing: border-box;
       table-layout: fixed;
       min-height: 20vh;
-      max-height: 55vh;
+      max-height: 52vh;
       thead {
         th {
           padding: 3px;
@@ -226,16 +227,18 @@
           border-bottom: 1px solid #d2d2d2;
           color: #000 !important;
           background: #dff6f6 !important;
-          width: 55px; // changed from 75px to 55px to make it compact
-
+          width: 45px; // changed from 75px to 55px to make it compact
+          font-size: 0.7em;
           // }
           &:nth-child(1) {
             text-align: left;
             width: 200px;
+            font-size: 1em;
           }
           &:last-child,
           &:nth-last-child(2) {
             width: 100px;
+            font-size: 1em;
           }
         }
       }
@@ -249,8 +252,8 @@
             text-align: center;
             border-right: 1px solid #ececec;
             border-top: 1px solid #ececec;
-            width: 75px;
-
+            width: 45px;
+            font-size: 0.8em;
             &:nth-child(1) {
               text-align: left;
               width: 200px;
