--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -1,4 +1,5 @@
 .hrTimeSheet {
+  margin-bottom: 80px;
   .noTimeSheetData {
     text-align: center;
     color: rgba(0, 0, 0, 0.1);
@@ -11,8 +12,17 @@
       color: rgba(0, 0, 0, 0.04);
     }
   }
-
-  margin-bottom: 80px;
+  .legendValue {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    padding: 2px 5px;
+    font-size: 0.7em;
+    margin-top: 0px;
+    border-radius: 3px;
+    b {
+      display: block;
+    }
+  }
   .weekdaysDiv {
     i {
       cursor: pointer;
@@ -23,6 +33,12 @@
     span {
       margin: 0 10px;
     }
+  }
+  .bg-default {
+    background-color: #e7ecef !important;
+  }
+  .bg-shortage {
+    background-color: #e6d926 !important;
   }
   .WeeklyTimeProgress {
     max-height: 53vh;
@@ -38,15 +54,80 @@
       .dayTypeCntr {
         height: 0.3rem;
         padding-right: 0;
+
+        .timeCheckCntr {
+          display: block;
+          position: relative;
+          padding-left: 35px;
+          margin-bottom: 12px;
+          cursor: pointer;
+          font-size: 22px;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          user-select: none;
+
+          /* Hide the browser's default checkbox */
+          input {
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+            height: 0;
+            width: 0;
+          }
+
+          /* Create a custom checkbox */
+          .checkmark {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 25px;
+            width: 25px;
+            background-color: #eee;
+          }
+
+          /* On mouse-over, add a grey background color */
+          &:hover input ~ .checkmark {
+            background-color: #ccc;
+          }
+
+          /* When the checkbox is checked, add a blue background */
+          input:checked ~ .checkmark {
+            background-color: #2196f3;
+          }
+
+          /* Create the checkmark/indicator (hidden when not checked) */
+          .checkmark:after {
+            content: "";
+            position: absolute;
+            display: none;
+          }
+
+          /* Show the checkmark when checked */
+          input:checked ~ .checkmark:after {
+            display: block;
+          }
+
+          /* Style the checkmark/indicator */
+          .checkmark:after {
+            left: 9px;
+            top: 5px;
+            width: 5px;
+            height: 10px;
+            border: solid white;
+            border-width: 0 3px 3px 0;
+            -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+          }
+        }
+
         .progress {
           height: 0.5rem;
           margin-top: 0.6rem;
           .progress-bar {
             position: relative;
             background-color: #e8e8e8;
-          }
-          .bg-default {
-            background-color: #e7ecef !important;
           }
           &:last-child {
             border-bottom: none;
@@ -77,7 +158,7 @@
               margin-left: 2px;
             }
             .lateTime {
-              color: #ff5c40;
+              color: #e6d926;
             }
             .OverTime {
               color: #17d217;
@@ -95,7 +176,7 @@
             }
           }
           .checkIn {
-            left: 15px;
+            left: 40px;
           }
           .totalHr {
             left: 42.5%;
@@ -110,7 +191,6 @@
           }
         }
       }
-
       span {
         width: auto;
         display: inline-block;
@@ -125,26 +205,31 @@
           background: rgba(255, 0, 0, 0.2);
           border: 1px solid rgba(255, 0, 0, 0.5);
           left: 35vw;
+          top: 2px;
         }
         &.paidLeaveCntr {
           background: rgba(0, 186, 190, 0.2);
           border: 1px solid rgba(0, 186, 190, 0.5);
           left: 34.8vw;
+          top: 2px;
         }
         &.unPaidLeaveCntr {
           background: rgba(255, 0, 0, 0.2);
           border: 1px solid rgba(255, 0, 0, 0.5);
           left: 34.3vw;
+          top: 2px;
         }
         &.holidayCntr {
           background: rgba(0, 17, 255, 0.2);
           border: 1px solid rgba(0, 17, 255, 0.5);
           left: 35.3vw;
+          top: 2px;
         }
         &.weekOffCntr {
           background: rgba(0, 0, 0, 0.2);
           border: 1px solid rgba(0, 0, 0, 0.5);
           left: 34.9vw;
+          top: 2px;
         }
       }
     }
