--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -40,6 +40,76 @@
   .bg-shortage {
     background-color: #e6d926 !important;
   }
+
+  .timeCheckCntr {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    /* Hide the browser's default checkbox */
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+    }
+
+    /* Create a custom checkbox */
+    .checkmark {
+      border-radius: 5px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 25px !important;
+      width: 25px !important;
+      background-color: #eee;
+      top: 2px;
+      border: 1px solid #dcdcdc;
+    }
+
+    /* On mouse-over, add a grey background color */
+    &:hover input ~ .checkmark {
+      background-color: #ccc;
+    }
+
+    /* When the checkbox is checked, add a blue background */
+    input:checked ~ .checkmark {
+      background-color: #2196f3;
+    }
+
+    /* Create the checkmark/indicator (hidden when not checked) */
+    .checkmark:after {
+      content: "";
+      position: absolute;
+      display: none;
+    }
+
+    /* Show the checkmark when checked */
+    input:checked ~ .checkmark:after {
+      display: block;
+    }
+
+    /* Style the checkmark/indicator */
+    .checkmark:after {
+      left: 9px;
+      top: 5px;
+      width: 5px;
+      height: 10px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
+  }
   .WeeklyTimeProgress {
     max-height: 53vh;
     overflow-x: hidden;
@@ -54,73 +124,6 @@
       .dayTypeCntr {
         height: 0.3rem;
         padding-right: 0;
-
-        .timeCheckCntr {
-          display: block;
-          position: relative;
-          padding-left: 35px;
-          margin-bottom: 12px;
-          cursor: pointer;
-          font-size: 22px;
-          -webkit-user-select: none;
-          -moz-user-select: none;
-          -ms-user-select: none;
-          user-select: none;
-
-          /* Hide the browser's default checkbox */
-          input {
-            position: absolute;
-            opacity: 0;
-            cursor: pointer;
-            height: 0;
-            width: 0;
-          }
-
-          /* Create a custom checkbox */
-          .checkmark {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 25px;
-            width: 25px;
-            background-color: #eee;
-          }
-
-          /* On mouse-over, add a grey background color */
-          &:hover input ~ .checkmark {
-            background-color: #ccc;
-          }
-
-          /* When the checkbox is checked, add a blue background */
-          input:checked ~ .checkmark {
-            background-color: #2196f3;
-          }
-
-          /* Create the checkmark/indicator (hidden when not checked) */
-          .checkmark:after {
-            content: "";
-            position: absolute;
-            display: none;
-          }
-
-          /* Show the checkmark when checked */
-          input:checked ~ .checkmark:after {
-            display: block;
-          }
-
-          /* Style the checkmark/indicator */
-          .checkmark:after {
-            left: 9px;
-            top: 5px;
-            width: 5px;
-            height: 10px;
-            border: solid white;
-            border-width: 0 3px 3px 0;
-            -webkit-transform: rotate(45deg);
-            -ms-transform: rotate(45deg);
-            transform: rotate(45deg);
-          }
-        }
 
         .progress {
           height: 0.5rem;
@@ -204,31 +207,31 @@
         &.absentCntr {
           background: rgba(255, 0, 0, 0.2);
           border: 1px solid rgba(255, 0, 0, 0.5);
-          left: 35vw;
+          left: 25vw;
           top: 2px;
         }
         &.paidLeaveCntr {
           background: rgba(0, 186, 190, 0.2);
           border: 1px solid rgba(0, 186, 190, 0.5);
-          left: 34.8vw;
+          left: 24.8vw;
           top: 2px;
         }
         &.unPaidLeaveCntr {
           background: rgba(255, 0, 0, 0.2);
           border: 1px solid rgba(255, 0, 0, 0.5);
-          left: 34.3vw;
+          left: 24.3vw;
           top: 2px;
         }
         &.holidayCntr {
           background: rgba(0, 17, 255, 0.2);
           border: 1px solid rgba(0, 17, 255, 0.5);
-          left: 35.3vw;
+          left: 25.3vw;
           top: 2px;
         }
         &.weekOffCntr {
           background: rgba(0, 0, 0, 0.2);
           border: 1px solid rgba(0, 0, 0, 0.5);
-          left: 34.9vw;
+          left: 24.9vw;
           top: 2px;
         }
       }
