--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
@@ -89,9 +89,12 @@
     padding-bottom: 20px; }
     .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress {
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
-      padding-top: 10px;
+      padding-top: 0;
       padding-bottom: 10px;
-      margin: 10px; }
+      margin: 10px;
+      font-size: 0.9rem; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress div:first-child {
+        font-size: 0.85rem; }
       .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr {
         height: 0.3rem;
         padding-right: 0; }
