--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -118,9 +118,15 @@
 
     .dailyTimeProgress {
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
-      padding-top: 10px;
+      padding-top: 0;
       padding-bottom: 10px;
       margin: 10px;
+      font-size: 0.9rem;
+
+      div:first-child {
+        font-size: 0.85rem;
+      }
+
       .dayTypeCntr {
         height: 0.3rem;
         padding-right: 0;
