--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
@@ -55,12 +55,11 @@
     .hrTimeSheet .timeCheckCntr .checkmark {
       border-radius: 5px;
       position: absolute;
-      top: 0;
       left: 0;
       height: 25px !important;
       width: 25px !important;
       background-color: #eee;
-      top: 2px;
+      top: -4px;
       border: 1px solid #dcdcdc; }
     .hrTimeSheet .timeCheckCntr:hover input ~ .checkmark {
       background-color: #ccc; }
@@ -100,7 +99,8 @@
         padding-right: 0; }
         .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress {
           height: 0.5rem;
-          margin-top: 0.6rem; }
+          margin-top: 0.4rem;
+          margin-left: 30px; }
           .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress .progress-bar {
             position: relative;
             background-color: #e8e8e8; }
