--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -39,7 +39,7 @@ header {
 }
 .appLogoCntr {
   width: 115px;
-  border-left: 1px solid #00d1d6;
+  border-left: 1px solid darken($primary-color, 10%);
   padding-left: 3px;
   margin-right: 10px;
 
