--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -34,7 +34,7 @@ header {
 
 .appLogoCntr {
   width: 115px;
-  border-left: 1px solid #00d1d6;
+  border-left: 1px solid #015884;
   padding-left: 3px;
   margin-right: 10px; }
   .appLogoCntr .appLogoOnly {
