--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -329,7 +329,7 @@ header {
 
 .navTopbar-dropdown {
   padding: 15px;
-  border-left: 1px solid #17d0b5;
+  border-left: 1px solid #0d7465;
   margin: 0;
   margin-right: -15px;
   cursor: pointer; }
