--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -375,7 +375,7 @@ header {
 }
 .navTopbar-dropdown {
   padding: 15px;
-  border-left: 1px solid lighten($primary-color, 10%);
+  border-left: 1px solid darken($primary-color, 10%);
   margin: 0;
   margin-right: -15px;
   cursor: pointer;
