Service Workers Registered in 'index.js

--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -188,7 +188,9 @@
 
   .holiday_cell {
     background: rgb(63, 120, 156);
-    color: white;
+    span {
+      color: white;
+    }
   }
 
   .time_cell:hover {
