--- a/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.css
+++ b/client/src/Components/EmployeeManagement/EmployeeShiftRostering/EmployeeShiftRostering.css
@@ -145,8 +145,9 @@
     color: white; }
 
 .EmpShiftRost_Screen .holiday_cell {
-  background: #3f789c;
-  color: white; }
+  background: #3f789c; }
+  .EmpShiftRost_Screen .holiday_cell span {
+    color: white; }
 
 .EmpShiftRost_Screen .time_cell:hover {
   background-color: #58b9c0; }
