--- a/client/src/Components/EmployeeManagement/SelfService/ActivityFeed/ActivityFeed.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/ActivityFeed/ActivityFeed.scss
@@ -43,6 +43,8 @@
           font-size: 1.1rem;
           a {
             margin-left: 5px;
+            color: #4183c4 !important;
+            cursor: pointer !important;
           }
         }
       }
