--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -15,7 +15,7 @@
       color: #000 !important;
       background: lighten($primary-color, 55%) !important;
       .style_Label {
-        font-weight: bold !important;
+        font-weight: 500 !important;
         white-space: pre-line !important;
         padding: 3px 0 !important;
       }
