--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -4,6 +4,8 @@ body {
   background-color: #e9e9e9;
   -webkit-font-smoothing: antialiased !important;
   -moz-osx-font-smoothing: grayscale; }
+  body label {
+    font-weight: 400 !important; }
 
 :global .header {
   max-height: 50px; }
@@ -40,6 +42,9 @@ body {
     text-shadow: 0px 1px 1px #1a1a1a; }
   :global .btn .style_Label {
     font-size: 1em; }
+  :global .btn .style_Label + h4 {
+    font-size: 1.5em;
+    color: #fff; }
 
 :global .btn:hover {
   cursor: pointer;
