--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -120,3 +120,26 @@
 @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
   .ReactTable {
     max-width: 95vw !important; } }
+
+.ui.search .resultSecStyles .title {
+  color: #000; }
+
+.ui.search .resultSecStyles .price {
+  color: #12a28d;
+  font-size: 1.2rem; }
+
+.ui.search .resultSecStyles small {
+  display: block; }
+  .ui.search .resultSecStyles small:last-child {
+    text-transform: uppercase;
+    color: gray; }
+
+.ui.search .input {
+  width: 100%; }
+
+.ui.search .prompt {
+  border-radius: 0.28571429rem; }
+
+.ui.search .results {
+  margin-top: 0;
+  width: 100%; }
